--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "terminal.integrated.env.linux": {
+        "GTK_PATH": ""
+    },
 }
